fix z-index figure license modal

--- a/packages/ndla-ui/src/Figure/component.figure.scss
+++ b/packages/ndla-ui/src/Figure/component.figure.scss
@@ -43,7 +43,7 @@
 
   .o-backdrop {
     display: none;
-    z-index: 1;
+    z-index: 999;
   }
 }
 
@@ -142,7 +142,7 @@
     background-color: $brand-color--lighter;
     box-shadow: 0 0 30px rgba($black, 0.2);
     padding: $spacing;
-    z-index: 10;
+    z-index: 1000;
     left: 0;
     top: 0;
     right: 0;
